<resources>
    <string name="app_name">童康源</string>
    <string name="brand_name">童康源</string>
    <string name="login_title">欢迎来到童康源</string>
    <string name="login_subtitle">为孩子提供温柔守护</string>
    <string name="phone_hint">请输入11位手机号</string>
    <string name="code_hint">请输入6位验证码</string>
    <string name="get_code">获取验证码</string>
    <string name="resend_code">重新获取(%1$d)s</string>
    <string name="login_register">登录 / 注册</string>
    <string name="wechat_login">微信快捷登录</string>
    <string name="copyright">童康源 © 2025</string>
    <string name="invalid_phone">请填写11位手机号</string>
    <string name="invalid_code">请填写6位验证码</string>
    <string name="login_success_new">登录成功，前往宝贝信息管理</string>
    <string name="login_success_existing">欢迎回来，正在跳转首页</string>
    <string name="launcher_message">守护儿童健康成长</string>
    <string name="child_info_placeholder">宝贝信息管理功能即将上线</string>
    <string name="child_info_title">孩子信息管理</string>
    <string name="child_info_subtitle">请完善孩子信息，便于提供专属守护</string>
    <string name="child_name_hint">请输入孩子姓名</string>
    <string name="child_age_hint">年龄</string>
    <string name="child_birth_hint">选择出生日期</string>
    <string name="child_gender_boy">男孩</string>
    <string name="child_gender_girl">女孩</string>
    <string name="child_add">+ 添加孩子</string>
    <string name="child_confirm">确认提交</string>
    <string name="child_delete_forbid">至少保留一位宝贝信息</string>
    <string name="child_form_incomplete">请先完善孩子信息</string>
    <string name="child_saved">宝贝信息已保存</string>
    <string name="child_edit">编辑</string>
    <string name="child_delete">删除</string>
    <string name="dialog_date_title">选择出生日期</string>
    <string name="dialog_cancel">取消</string>
    <string name="dialog_confirm">确认</string>
    <string name="child_gender_label">孩子性别</string>
    <string name="child_age_label">孩子年龄</string>
    <string name="child_birth_label">出生年月</string>
    <string name="child_name_label">孩子姓名</string>
    <string name="toast_back_blocked">请先完成信息提交</string>
    <string name="home_slogan">守护儿童健康成长</string>
    <string name="home_consult_button">咨询指导</string>
    <string name="home_consult_subtitle">童康源专业咨询师团队</string>
    <string name="consult_title">咨询指导</string>
    <string name="consult_single">单项问题</string>
    <string name="consult_multi">多项问题</string>
    <string name="consult_tip">请选择您当前最关注的问题</string>
    <string name="consult_more">更多儿童健康方案即将上线</string>
    <string name="consultor_list_title">童康源 咨询师推荐</string>
    <string name="consultant_subtitle">精选四年以上儿童心理咨询师</string>
    <string name="btn_view_consultants">查看咨询师推荐</string>
    <string name="wechat_scan_title">微信扫码登录</string>
    <string name="wechat_scan_tip">请使用微信扫一扫确认登录</string>
    <string name="wechat_scan_desc">本页面为模拟扫码授权，点击下方按钮完成登录</string>
    <string name="btn_authorize">确认授权</string>
    <string name="btn_cancel">取消</string>
    <string name="consultant_rating">%1$.1f 分</string>
    <string name="consultant_served">已服务 %1$s+ 家庭</string>
    <string name="paywall_title">未开通童康源咨询服务</string>
    <string name="paywall_desc">充值后可查看咨询师详情并预约专业服务</string>
    <string name="btn_go_recharge">前往充值</string>
    <string name="btn_close">稍后再说</string>
    <string name="detail_title_template">%1$s 咨询师</string>
    <string name="detail_specialty_label">擅长领域</string>
    <string name="detail_intro_label">咨询风格</string>
    <string name="detail_review_label">家长反馈</string>
    <string name="btn_book">预约咨询</string>
    <string name="not_paid_hint">请先开通会员</string>
    <string name="recharge_title">童康源 咨询会员充值</string>
    <string name="recharge_plan_month">月度会员 99元</string>
    <string name="recharge_plan_quarter">季度会员 269元</string>
    <string name="recharge_pay_guide">请选择支付方式，生成专属二维码</string>
    <string name="recharge_qr_label">支付二维码</string>
    <string name="btn_refresh_qr">刷新二维码</string>
    <string name="btn_close_qr">关闭</string>
    <string name="btn_confirm_pay">确认支付</string>
    <string name="toast_select_plan">请先选择会员套餐</string>
    <string name="toast_select_pay">请选择支付方式</string>
    <string name="toast_pay_success">充值成功，已开通咨询服务</string>
    <string name="appointment_title">预约咨询 - 童康源</string>
    <string name="appointment_select_date">选择日期</string>
    <string name="appointment_select_time">选择时间段</string>
    <string name="appointment_date_hint">请选择预约日期</string>
    <string name="appointment_placeholder">请描述孩子的具体情况...</string>
    <string name="appointment_time_required">请选择时间段</string>
    <string name="btn_submit_appointment">提交预约</string>
    <string name="appointment_success_title">预约成功</string>
    <string name="appointment_success_desc">咨询师将尽快与您确认时间，感谢信任</string>
    <string name="appointment_desc_required">请完善问题描述，便于咨询师准备方案</string>
    <string name="chat_title">咨询聊天</string>
    <string name="chat_with_template">与 %1$s 咨询师在线沟通</string>
    <string name="chat_with_unknown">咨询师客服</string>
    <string name="chat_appointment_info">已预约：%1$s %2$s</string>
    <string name="chat_input_hint">和咨询师说点什么…</string>
    <string name="chat_send">发送</string>
    <string name="chat_welcome_with_name">%1$s 咨询师：您好～我已看到您的预约。</string>
    <string name="chat_welcome_generic">咨询师：您好～我已看到您的预约。</string>
    <string name="chat_welcome_follow">您可以先补充孩子的状态，我会尽快给到指导。</string>
    <string name="chat_auto_reply">收到啦，我正在整理方案，请稍等片刻。</string>
    <string name="chat_voice_call">语音通话</string>
    <string name="chat_video_call">视频连线</string>
    <string name="chat_voice_call_message">正在与咨询师建立语音连接…</string>
    <string name="chat_video_call_message">正在为您发起视频连线…</string>
    <string name="chat_action_end">结束</string>
    <string name="chat_action_cancel">取消</string>
    <string name="chat_attach_image">发送图片</string>
    <string name="chat_attach_video">发送视频</string>
    <string name="chat_image_caption">已发送 1 张图片供咨询师查看</string>
    <string name="chat_video_caption">已发送 1 段视频，咨询师可点击播放</string>
    <string name="chat_video_overlay">视频</string>
    <string name="chat_select_source">选择来源</string>
    <string name="chat_select_camera">拍照/录像</string>
    <string name="chat_select_gallery">从相册选择</string>
    <string name="chat_permission_denied">需要相机和存储权限才能发送图片/视频</string>
    <string name="chat_camera_error">相机启动失败</string>
    <string name="label_birth_month">出生年月</string>
    <string name="label_ethnicity">民族</string>
    <string name="label_native_place">籍贯</string>
    <string name="label_family_rank">家中排行</string>
    <string name="label_birth_place">出生地</string>
    <string name="label_language_env">语言环境</string>
    <string name="label_school">现就读学校（幼儿园）</string>
    <string name="label_home_address">现家庭住址</string>
    <string name="label_interest_hobby">孩子兴趣爱好</string>
    <string name="label_interest_activity">孩子兴趣活动</string>
    <string name="label_body_status">孩子身体状态</string>
    <string name="label_body_status_detail">如身体状态较差，请填写具体情况</string>
    <string name="label_medical_history">过往病史</string>
    <string name="label_medical_other_detail">请填写其他病史</string>
    <string name="label_father_phone">父亲电话</string>
    <string name="label_mother_phone">母亲电话</string>
    <string name="label_guardian_phone">监护人电话</string>
    <string name="label_language_hint">如：普通话/粤语双语环境</string>
    <string name="label_address_hint">请填写详细家庭住址</string>
    <string name="body_status_excellent">很好</string>
    <string name="body_status_good">良好</string>
    <string name="body_status_ok">普通</string>
    <string name="body_status_poor">较差</string>
    <string name="body_status_bad">很差</string>
    <string name="medical_none">无</string>
    <string name="medical_encephalitis">脑炎</string>
    <string name="medical_epilepsy">癫痫</string>
    <string name="medical_heart">心脏病</string>
    <string name="medical_asthma">哮喘</string>
    <string name="medical_allergy">过敏</string>
    <string name="medical_tb">肺结核</string>
    <string name="medical_other">其他</string>
    <string name="nav_home">首页</string>
    <string name="nav_message">消息</string>
    <string name="nav_profile">我的</string>
</resources>